configs/kubernetes/user-microservice-sd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-microservice
spec:
  selector:
    matchLabels:
      app: user-microservice
  replicas: 1
  template:
    metadata:
      labels:
        app: user-microservice
    spec:
      containers:
      - name: user-microservice
        image: manjornocontainers.azurecr.io/test-publisher-app
        imagePullPolicy: Always
        -name: KEYCLOAK_URL
         value: http://52.142.38.205/auth
        - name: KEYCLOAK_USERNAME
          valueFrom:
            secretKeyRef:
              name: keycloak-secret
              key: username
        - name: KEYCLOAK_PASSWORD
          valueFrom:
            secretKeyRef:
              name: keycloak-secret
              key: password
        - name : KEYCLOAK_CLIENTCLI_SECRET
          valueFrom:
            secretKeyRef:
              name: keycloak-secret
              key: clientSecret
        ports:
        - containerPort: 3100

---

apiVersion: v1
kind: Service
metadata:
  name: user-microservice
spec:
  selector:
    app: user-microservice
  ports:
  - port: 3100
    targetPort: 3100
