configs/kubernetes/user-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-microservice-ingress
  namespace: user-microservice
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: user-microservice
            port:
              number: 3100
